<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/toolbar_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="22sp"

            />

    </android.support.v7.widget.Toolbar>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment class="com.plasius.letscook.fragments.MasterFragment"
            android:id="@+id/fragment_master"
            android:layout_width="match_parent" android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>