...
                android:textSize="22sp"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/fragment_detail_tv_description"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
...
